# depthai-debug

./: CMakeLists.txt  README.md  camera.cpp  camera.py  camera_crash_test.py  stereo_inertial_publisher.cpp
launch/: oak_camera_simple.launch.py
pipeline/: depthai_custom_pipeline_plugin.cpp  depthai_custom_pipeline_plugin.hpp
